[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/Domine-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://BidTile.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[node name="BidTile" type="Control"]
margin_right = 64.0
margin_bottom = 64.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BidPanel" type="Panel" parent="."]
margin_right = 64.0
margin_bottom = 64.0

[node name="BidButton" type="Button" parent="BidPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BidPanel/BidButton" to="." method="_on_BidButton_pressed"]
